--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-data
+data/
+notebooks/**/outputs/
 config.py
-notebooks/**/outputs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -177,7 +177,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
