--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pandas>=2.3.1",
     "pdfplumber>=0.11.7",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
     "qdrant-client>=1.15.1",
     "sentence-transformers>=5.1.0",
     "uvicorn>=0.35.0",
